<resources>
    <string name="element_messagem_liga">MensagemLida</string>
    <string name="element_sort_report_erro">SortimentoReportErro</string>
    <string name="element_rota_guiada">RotaGuiada</string>
    <string name="element_rota_guiada_tarefa">RotaGuiadaTarefa</string>
    <string name="element_rota_guiada_acao">RotaGuiadaAcao</string>
    <string name="element_pesquisa_layout">PesquisaLayout</string>
    <string name="element_pesquisa_resposta">PesquisaResposta</string>
    <string name="element_planejamento_rota">RotaGuiadaPlanejamentoRota</string>
    <string name="app_name">DanSales</string>
    <string name="app_version">Versão %1$s</string>
    <string name="google_maps_key">AIzaSyCAN__8Tieemd4Sld6DmPAs5YNzarPx5Ps</string>
    <string name="session_expired">Sessão expirou, realize o login novamente!</string>
    <string name="username">c8686293-1639-4687-8b7c-675419a07e76</string>
    <string name="password">xafIN01gwKdG</string>
    <string name="workspace">56f7d4cf-ec0f-48c7-9385-a87a22bfef63</string>
    <string name="title_home">Início</string>
    <string name="title_pedidos">Pedidos</string>
    <string name="title_hist_pedidos">Histórico de Pedidos</string>
    <string name="title_add_pedido">Novo pedido</string>
    <string name="title_rg">Rota Guiada</string>
    <string name="title_clientes">Clientes</string>
    <string name="title_rastreio">Rastreio de Pedidos</string>
    <string name="title_aprovacao">Aprovação</string>
    <string name="title_liberacao">Liberação</string>
    <string name="title_rota">Rota Guiada</string>
    <string name="title_relatorios">Relatórios</string>
    <string name="title_consulta_generica">Consulta Genérica</string>
    <string name="title_tap">TAP</string>
    <string name="title_CR">CR</string>
    <string name="title_tap_anexo">Anexos</string>
    <string name="title_pesquisa">Pesquisa</string>
    <string name="title_check_list">Check-list</string>
    <string name="title_inspetoria">Inspetoria</string>
    <string name="title_screen_message">Mensagem</string>
    <string name="title_planejamento_rota">Planejamento Rota</string>
    <string name="title_nova_atividade">Nova atividade</string>
    <string name="title_sync_data">Sincronizar</string>
    <string name="title_requisicao">Requisição</string>
    <string name="title_auto_sync_data">Auto Sincronismo</string>
    <string name="title_settings">Configurações</string>
    <string name="title_help">Ajuda</string>
    <string name="title_about">Sobre</string>
    <string name="title_logout">Sair</string>
    <string name="title_chat">Isaac Chat</string>
    <string name="title_ambiente">Ambiente</string>
    <string name="title_system">Atualização do Sistema</string>
    <string name="title_troca_senha">Alterar Senha</string>
    <string name="title_recupera_senha">Recuperar Senha</string>
    <string name="instrucoes_recupera_senha">Instruções: para recuperar a senha, preencha abaixo com o seu login e clique em enviar. Se esse foi o último dispositivo acessado por você, poderá alterar a senha aqui mesmo. Caso contrário, a alteração deverá ser feita através do e-mail de recuperação de senha que enviaremos para o e-mail cadastrado.</string>
    <string name="title_log">Log do pedido</string>
    <string name="title_layout">Layout</string>
    <string name="title_layout_report">Reportar Layout incorreto</string>
    <string name="title_log_tap">ETAPAS</string>
    <string name="title_cliente_detail">Detalhes do Cliente</string>
    <string name="title_pick_cliente">Sel. Cliente</string>
    <string name="title_pick_layout">Sel. Layout</string>
    <string name="title_pick_agenda">Sel. Agenda</string>
    <string name="title_pedido_detail">Pedido</string>
    <string name="title_pedido_justificativa">Justificativa</string>
    <string name="title_rota_guiada_detail">Rota do dia</string>
    <string name="title_add_item">Incluir item</string>
    <string name="title_edit_item">Editar item</string>
    <string name="title_visualizar_item">Visualizar item</string>
    <string name="title_relatorio_notas">Notas</string>
    <string name="title_relatorio_check_list_nota">Notas Checklist</string>
    <string name="title_relatorio_objetivos">Objetivo</string>
    <string name="title_relatorio_positivacao">Positivação</string>
    <string name="title_relatorio_carteira">Cart. Pedidos</string>
    <string name="title_relatorio_saldo_mc">Saldo MasterContrato</string>
    <string name="title_relatorio_web_user">Selecionar Usuários</string>
    <string name="title_page_home">Olá %s,\no que deseja fazer? %s</string>
    <string name="tab_pedido_cabecalho">Dados</string>
    <string name="tab_pedido_aprovacao">Aprovação</string>
    <string name="tab_pedido_liberacao">Liberação</string>
    <string name="tab_pedido_itens">Itens</string>
    <string name="tab_pedido_observacao">Observação</string>
    <string name="tab_pedido_resumo">Resumo</string>
    <string name="tab_pedido_log">Rastreio de Pedidos</string>
    <string name="tab_rota_guiada_cliente">Cliente</string>
    <string name="tab_rota_guiada_resumo">Resumo</string>
    <string name="tab_relatorio_notas_cabecalho">Cabeçalho</string>
    <string name="tab_relatorio_notas_sku">SKU</string>
    <string name="menu_filter_title">Filtro</string>
    <string name="menu_calendar_title">Calendário</string>
    <string name="menu_apply_filter_title">Aplicar filtro</string>
    <string name="menu_cancel_filter_title">Limpar filtro</string>
    <string name="title_hom">(Você está em homologação)</string>
    <string name="title_connection_login">Realizando autenticação com o servidor</string>
    <string name="title_connection_error">Não foi possível conectar ao servidor, por favor verifique sua conexão e tente novamente.</string>
    <string name="hint_email_id_login">Login (e-mail ou código)</string>
    <string name="cliente_hint">Cliente</string>
    <string name="email_hint">E-mail</string>
    <string name="recover_password">Recuperar senha</string>
    <string name="send_email_to_recover_email">Enviar</string>
    <string name="login">Entrar</string>
    <string name="login_danone">Login com SSO</string>
    <string name="login_default">Login sem SSO</string>
    <string name="ciente">Ciente</string>
    <string name="info">Informações</string>
    <string name="report">Reportar</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="user_hint">Login</string>
    <string name="user_name_hint">Nome do usuário</string>
    <string name="name_hint">Nome abreviado</string>
    <string name="update_user_description">Para alterar seus dados pessoais, preencha os campos corretamente, seguindo as instruções abaixo e, em seguida, clique em ENVIAR para completar a operação.Os dados serão enviados para análise e poderão ser reprovados ocasinando bloqueio ao seu acesso, portanto: \n\nNão utilizar nomes genéricos, para os campos Nome Usuário e Nome Abreviado \n\nInformar um E-MAIL válido que tenha acesso para recebimento do link de validação</string>
    <string name="update_user_title">Alterar Dados</string>
    <string name="promotor_hint">Promotor</string>
    <string name="password_hint">Senha</string>
    <string name="current_password_hint">Senha Atual</string>
    <string name="new_password_hint">Nova Senha</string>
    <string name="confirm_password_hint">Confirmar Nova Senha</string>
    <string name="unidade_negocio_hint">Unidade de negócio</string>
    <string name="cliente_nome_hint">Razão Social</string>
    <string name="cliente_cnpj_hint">CNPJ</string>
    <string name="cliente_bandeira_hint">Bandeira</string>
    <string name="cliente_codigo_sap_hint">Código SAP</string>
    <string name="cliente_layout_hint">Layout da loja</string>
    <string name="current_layout_hint">Layout atual</string>
    <string name="current_report_hint">Evidências</string>
    <string name="new_layout_hint">Novo Layout</string>
    <string name="cliente_endereco_hint">Endereço</string>
    <string name="cliente_condicao_pagamento_hint">Condição de pagamento</string>
    <string name="cliente_status_hint">Status</string>
    <string name="cliente_data_ultimo_pedido">Data Último Pedido</string>
    <string name="search_cliente_hint">Pesquisar Cliente</string>
    <string name="id_produto_hint">ID Produto</string>
    <string name="produto_hint">Produto</string>
    <string name="produto_expiration_date">Data de Validade</string>
    <string name="produto_expiration">Validade</string>
    <string name="produto_valor_gondula_hint">Valor Gôndola</string>
    <string name="produto_quantidade_hint">Quantidade</string>
    <string name="produto_desconto_hint">% Desconto</string>
    <string name="produto_data_venc_hint">Data vencimento</string>
    <string name="produto_estoque_hint">Qtd. estoque</string>
    <string name="produto_batch">Batch</string>
    <string name="produto_qtd_ped_ant_hint">Qtd. pedido anterior</string>
    <string name="produto_itens_p_caixa_hint">Qtd. p/ caixa</string>
    <string name="produto_valor_uni_hint">Valor unitário</string>
    <string name="produto_valor_p_caixa_hint">Valor p/ caixa</string>
    <string name="produto_media_pedido_hint">Qtd. média p/ pedido</string>
    <string name="produto_valor_total_hint">Valor total</string>
    <string name="produto_sortimento_hint">Sortimento</string>
    <string name="produto_peso_total">Peso total</string>
    <string name="produto_ultimo_item_hint">Último produto incluso</string>
    <string name="cliente_indisponivel">CLIENTE INDISPONÍVEL</string>
    <string name="pedido_tipo_label">Tipo: %s</string>
    <string name="pedido_ped_label">Ped.: %s</string>
    <string name="pedido_ped_reg_label">Regional: %s</string>
    <string name="pedido_ped_cli_label">Pedido Cliente: %s</string>
    <string name="pedido_codigo_sap_label">Pedido SAP: %s</string>
    <string name="pedido_valor_total_label">Total: %s</string>
    <string name="pedido_emissao_label">Emissão: %s</string>
    <string name="pedido_nf_label">Nota Fiscal: %s</string>
    <string name="pedido_serie_nf_label">Serie: %s</string>
    <string name="pedido_peso_label">Peso: %s Kg</string>
    <string name="obs_hint">Observações</string>
    <string name="pedido_obs_hint">Observações interna</string>
    <string name="pedido_obs_nf_hint">Observações da nota fiscal</string>
    <string name="need_help">Precisa de ajuda?</string>
    <string name="help_guide">
        Caso esteja tendo dificuldade para acessar ou utilizar o aplicativo,
        por favor entre em contato com o Help Desk.
    </string>
    <string name="call_help_desk">Ligar</string>
    <string name="help_desk_label">Help Desk</string>
    <string name="help_desk_phone_number">0800 770 2929</string>
    <string name="environment_button">Ambiente</string>
    <string name="change_password_button">Alterar Senha</string>
    <string name="restore_button">Resetar Geral</string>
    <string name="sync_button">Sincronizar</string>
    <string name="recover_password_button">Recuperar senha</string>
    <string name="imei">IMEI</string>
    <string name="status_sync">Último Sincronismo</string>
    <string name="version">Versão do aplicativo</string>
    <string name="database_version">Banco de dados</string>
    <string name="database_version_placeholder">SQLite</string>
    <string name="relatorio_tipo_objetivo">Objetivo</string>
    <string name="relatorio_tipo_carteira_pedidos">Carteira de Pedidos</string>
    <string name="relatorio_tipo_notas">Notas</string>
    <string name="relatorio_checklist_nota">Notas Checklist</string>
    <string name="relatorio_saldo_positivacao">Positivação</string>
    <string name="relatorio_saldo_master_contrato">Saldo MasterContrato</string>
    <string name="etap_lista_objetivo">Listar TAP</string>
    <string name="etap_financas">Análise Finanças</string>
    <string name="etap_consultar">Consultar TAP</string>
</resources>