<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="br.com.jjconsulting.mobile.dansales.HelpFragment">

    <LinearLayout
        android:id="@+id/help_main_content_view_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_help_blue_62dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_double_vertical_spacing"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/need_help" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_double_vertical_spacing"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/help_guide" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_triple_vertical_spacing">

            <ImageView
                android:id="@+id/ic_headset_mic_image_view"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="@dimen/app_vertical_spacing"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_headset_mic_blue_62dp" />

            <TextView
                android:id="@+id/help_deskp_label_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@id/ic_headset_mic_image_view"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:text="@string/help_desk_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ic_headset_mic_image_view"
                android:layout_below="@id/help_deskp_label_text_view"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorPrimary"
                android:text="@string/help_desk_phone_number" />

        </RelativeLayout>

        <Button
            android:id="@+id/call_help_desk_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_triple_vertical_spacing"
            style="@style/DanButton"
            android:text="@string/call_help_desk" />

    </LinearLayout>

</ScrollView>
