<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.jjconsulting.mobile.dansales.RecuperaSenhaActivity">

    <ProgressBar
        android:id="@+id/recupera_senha_progress_bar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/formulario_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/login_horizontal_margin"
        android:paddingEnd="@dimen/login_vertical_margin"
        android:paddingStart="@dimen/login_vertical_margin"
        android:paddingTop="@dimen/login_horizontal_margin"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:text="@string/title_recupera_senha"
            android:textColor="@color/recuperaSenhaTitleText"
            android:textSize="@dimen/recuperar_senha_title_text_size" />

        <TextView
            android:id="@+id/instrucoes_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:text="@string/instrucoes_recupera_senha"
            android:textColor="@color/recuperaSenhaTitleText"
            android:textSize="@dimen/recuperar_senha_instrucoes_title_text_size" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email_id_login"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/recover_password_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/app_vertical_spacing"
            android:text="@string/send_email_to_recover_email"
            style="@style/DanButton" />

    </LinearLayout>

</RelativeLayout>
